--- a/site/FirstGrading/Exam/index.html
+++ b/site/FirstGrading/Exam/index.html
@@ -7,30 +7,92 @@
         <title>Villena_FGExam</title>
     </head>
     <body>
-        <h1 size='20px' font='arial'>2021 Technology Trends</h1>
-        <a href=""><img alt="AIML"src="" width= height></a>   
-        <a href=""><img alt="TandT"src="" width= height></a> 
-        <a href=""><img alt="elearn"src="" width= height></a>     
+        <h1 background-image="../assets/imgs/banner.jpg" size='20px' font='arial'>2021 Technology Trends</h1>
+        <a href="#Artificial Intelligence and Machine Learning"><img src="../assets/imgs/AIML.jpeg"></a>   
+        <a href=""><img src="../assets/imgs/TandT.png"></a> 
+        <a href=""><img src="../asstes/imgs/elearn.jpg"></a>     
         <table>
             <tr>
                 <th>
                     <ol>
                         <li>Artificial Intelligence and Machine Learning</li>
                         <h4>by: Sara Mason</h4>
-                        <h5></h5>
-                        <p></p>
+                        <h5>Source: https://medium.com/codex/</h5>
+                        <p>Five top trends for 2021 in Artificial Intelligence and Machine
+                            Learning (AI/ML) for staying ahead of the curve. What is
+                            important for being effective for applying algorithms in coding
+                            to utilize data to solve problems?</p>
+                        <p>Blockchain, is a technology that uses a sequential set of
+                            transactions leaving a defined register of events and process
+                            for combining tasks. Fusing AI/ML and blockchain for data
+                            solutions is coming.</p>
+                        <p>Cloud, is scalable and virtual environments. These are available
+                            to set users with no physical location or provision requirement.
+                            Cloud creates a different model for IT and data services by not
+                            restricting architecture by physical requirements.</p>
+                        <p>Ethical Artificial Intelligence, is a field, study, and
+                            implementation of framework for limiting or eliminating bias in
+                            algorithms. This involves evaluating a solution for data use and
+                            implementation for cultural and social impact.</p>
+                        <p>Interoperability, using APIs and libraries together through
+                            replication or scripting across stacks for easy implementations.
+                            Having reusable and expandable blocks for coding across
+                            platforms such as Amazon Web Services, Microsoft Azure, SAP,
+                            Snowflake, and more.</p>
+                        <p>Security, keeping data safe through stewardship. Both innovation
+                            and workflow will be a topic for 2021 to enhance security
+                            methods for specialized data services based on Artificial
+                            Intelligence and Machine Learning to differentiate from software
+                            development norms.</p>
+                        <p>The way to stay ahead is to know the list of technologies that
+                            touch a domain and achieve proficiency in them for incorporation
+                            into tasks to maintain productivity. The five themes for 2021
+                            for maintaining relevance in AI/ML: Blockchain, Cloud, Ethical
+                            Artificial Intelligence (AI), Interoperability, and Security
+                            (Cybersecurity).</p>
                         <li>Telehealth and telemedicine</li>
-                        <h4></h4>
-                        <h5></h5>
-                        <p></p>
+                        <h4>by: Anis Uzzaman</h4>
+                        <h5>Source: https://www.inc.com/anis-uzzaman/top-business-technologytrends-in-2021</h5>
+                        <p>Institutions, especially in health care, are working to lower
+                            the exposure of Covid-19 to patients and workers. Many private and public practices have started implementing more telehealth
+                            offerings such as doctor-patient video chats, A.I. avatar-based
+                            diagnostics, and no-contact-based medication delivery.</p>
+                        <p>Telehealth visits have surged by 50 percent compared with prepandemic levels. IHS Technology predicted that 70 million
+                            Americans would use telehealth by 2020. Since then, Forrester
+                            Research predicted the number of U.S. virtual care visits will
+                            reach almost a billion early in 2021.</p>
+                        <p>Teladoc Health, Amwell, Livongo Health, One Medical, and Humana
+                            are some of the public companies offering telehealth services to
+                            meet the current needs. Startups are not far behind. Startups
+                            like MDLive, MeMD, iCliniq, K Health, 98point6, Sense.ly, and
+                            Eden Health have also contributed toward meeting the growing
+                            needs in 2020, and will continue offering creative solutions in
+                            2021. Beyond telehealth, in 2021 we can expect to see health
+                            care advancements in biotech and A.I., as well as machine
+                            learning opportunities (example: Suki AI) to support diagnosis,
+                            admin work, and robotic health care.
+                            </p>
                         <li>Online eductaion and e-learning</li>
-                        <h4></h4>
-                        <h5></h5>
-                        <p></p>
+                        <h4>by: Sean Bui</h4>
+                        <h5>Source: https://elearningindustry.com/top-educational-technologytrends-2020-2021</h5>
+                        <p>Educational Technology Trends In 2020-2021
+                            Big Data, Machine Learning, and the Internet of Things (IoT)
+                            were the biggest educational technology trends of 2019. However,
+                            distance learning has become the one trend that rules them all.
+                            The COVID-19 pandemic has drastically changed the way we teach
+                            and learn. Students now have to get used to distance learning
+                            via digital platforms due to social distancing. Even though some
+                            schools are reopening, this trend may continue until 2021. The
+                            latest EdTech trends in 2020, and further into 2021 are being
+                            revolutionized with a strong focus on connectivity, versatility,
+                            and student-centered learning. Let’s take a look at the latest
+                            top 10 trends in educational technology.</p>
                     </ol>
                 </th>
                 <th>
-                    <video controls autoplay><source src="MachineLearning" type="video/mp4"></video>
+                    <video width="320" height="240" controls><source src="../Exam/assets/vids/MachineLearning.mp4" type="video/mp4"></video>
+                    <video width="320" height="240" controls><source src="../Exam/assets/vids/HealthCare.mp4" type="video/mp4"></video>
+                    <video width="320" height="240" controls><source src="../Exam/assets/vids/OnlineLearning.mp4" type="video/mp4"></video>
                 </th>
             </tr>
         </table>
