--- a/site/FirstGrading/Exam/index.html
+++ b/site/FirstGrading/Exam/index.html
@@ -6,21 +6,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Villena_FGExam</title>
     </head>
-    <body bgcolor="#D4E6F1"> 
+    <body bgcolor='#D4E6F1'id="top"> 
         <div style="background-image:url('../Exam/assets/imgs/banner.jpg') ;
                      background-repeat: no-repeat; background-size:100%;">
         <font face='arial' size='20px' color='#F9E79F '>
         <h1>
             2021 Technology Trends
         </h1></font></div> 
-        <nav id="top">
+        <nav>
             <a href="#artificial"><img src="../Exam/assets/imgs/AIML.jpeg"></a>   
             <a href="#telehealth"><img src="../Exam/assets/imgs/TandT.png"></a> 
             <a href="#online"><img src="../Exam/assets/imgs/elearn.jpg"></a> 
         </nav>
-        <table width='960px'>
-            <tr align='left'>
-                <td>  
+        <font face="consolas"
+        <table width='960px' align="center" cellspacing="5px" cellpadding="15px">
+            <thead>
+                <tr>
+                    <td background="picture" colspan="2"><font face="arial black,
+                     sans-serif" size="20px" color="blue"> 2021 Technology Trends</font></td>
+                </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td valign="top" align='center' colspan="2">  
                     <ol type="I">
                         <section id="artificial">
                         <li><font face='cambria' size='5px' color='#641E16'>Artificial Intelligence and Machine Learning</font></li>
