--- a/site/Midterm/Exercise9.html
+++ b/site/Midterm/Exercise9.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Semantic Wiki/Internal CSS</title>
         <meta charset="utf-8" />
         <meta name="author" content="J.Villena" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Semantic Wiki</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="styles\styles.css">
     </head>
     <body>
+        <div id="mainContent">
         <header>
             <h1>Holy Spirit</h1>   
         </header>
@@ -26,6 +28,7 @@
                 who God is. We need Him in our life as a conduit to 
                 become who God created us to be, and through His power
                  we have aid in all situations. Without Him, we are powerless.</p>
+        </main>         
         <section id="definition">
             <h2>Definition and Classification</h2>
             <article>
@@ -81,13 +84,13 @@
             </ol>
             </article>
         </section>
-        <section id="references">
+        <footer id="references">
             <h2>References</h2>
-            <footer>
                 <ol>
                     <li> <a href="https://www.catholiceducation.org/en/culture/catholic-contributions/the-origin-of-the-holy-spirit.html">Origin of the Holy Spirit</a></li>
                     <li> <a href="https://www.crosswalk.com/faith/spiritual-life/10-supernatural-ways-the-holy-spirit-wants-to-empower-you.html">Spiritual Life</a></li>                  
                 </ol>
-        </section>
+            </footer>
+    </div>
     </body>
 </html>
