--- a/site/Midterm/lesson9.html
+++ b/site/Midterm/lesson9.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <link rel="stylesheet" type="text/css"
-    href="styles/">
-    <style>
-        body{
-            background-color: dodgerblue;
-            color: floralwhite;
-            width: 960px;
-            margin: 20px auto;
-            border: 2px #FAB729 solid;
-        }
-    </style>
+    href="styles/styles.css">
 </head>
 <body style="background-color: deepskyblue;
             color: dimgrey;">
-    CSS style instructions stored in 'style.css' will be applied to this page.
+    <div id="mainContent">
+        <header>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">FEEDBACK</a></li>
+            </ul>
+        </nav>
+        <article>
+            <div>
+            <section class="sec one"></section>
+            <section class="sec two"></section>
+            </div>
+            <aside class="sec three"></aside>
+        </article>
+        <footer></footer>
+    </div>
 </body>
 </html>
