--- a/site/Midterm/Exercise9.html
+++ b/site/Midterm/Exercise9.html
@@ -11,15 +11,13 @@
         <div id="mainContent">
         <header>
             <h1>Holy Spirit</h1>   
-        </header>
         <nav>
-            <ul>
-                <li><a href="#definition">Definition and Classification</a></li>
-                <li><a href="#history">Origin of the Holy Spirit</a></li>
-                <li><a href="#empower">10 Supernatural Ways He Empowers You</a></li>
-                <li><a href="#references">References</a></li>
-            </ul>
+            <a class="nav" href="#definition">Definition</a>
+            <a class="nav" href="#history">Origin</a>
+            <a class="nav" href="#empower">10 Supernatural Ways</a>
+            <a class="nav"href="#references">References</a>
         </nav>
+        </header>
         <main>
             <p>“The <b>Holy Spirit</b> illuminates the minds of people, 
                 makes us yearn for God, and takes spiritual truth and 
