--- a/site/Midterm/Exercise10.html
+++ b/site/Midterm/Exercise10.html
@@ -8,16 +8,16 @@
         <link rel="stylesheet" type="text/css" href="styles/Exercise10.css">
     </head>
     <body>
+        <div>
         <header><img src="https://i.pinimg.com/originals/90/38/a4/9038a431f8f2064eff5abcf4f25d9870.png">
-        <nav>
-            <ol>
-                <li><a href=#naomi>Disney Princess</a></li>
-                <li><a href=#froz>Disney Movie</a></li>
-                <li><a href=#music>Disney Music</a></li>
-                <li><a href=#ref>References</a></li>
-            </ol>
-        </nav>
         </header>
+        <nav>
+            <a href=#naomi>Disney Princess</a>
+            <a href=#froz>Disney Movie</a>
+            <a href=#music>Disney Music</a>
+            <a href=#ref>References</a>
+        </nav>
+        </div>
         <article>
             <section id="naomi">
                 <h2>Naomi Scott</h2>
