--- a/site/Midterm/Exercise12.html
+++ b/site/Midterm/Exercise12.html
@@ -11,31 +11,31 @@
     <div id="main">
         <header>1. Header
         <div id="head">
-            <section class="col col-1">1.1 Brand</section>
-            <section class="col col-9">1.2 Global Nov</section>
-            <section class="col col-2">1.3 Tools</section>
+            <section class="col col-1 col-md-2 col-xs-12">1.1 Brand</section>
+            <section class="col col-9 col-md-10 col-xs-12">1.2 Global Nov</section>
+            <section class="col col-2 col-md-3 col-xs-12">1.3 Tools</section>
         </div>
         </header>
         <div id="ads">3. Ad
         </div>
         <nav>2. Hero
         <div id="nav">
-            <section class="col col-9">2.1 Hero Feature</section>
-            <section class="col col-3">2.2 Hero Call to Action</section>
+            <section class="col col-9 col-md-9 col-xs-12">2.1 Hero Feature</section>
+            <section class="col col-3 col-md-4 col-xs-12">2.2 Hero Call to Action</section>
         </div>
         </nav>
         <main>4. Body
         <div id="body">
-            <section class="col col-3">4.1 Article Feature</section>
-            <section class="col col-9">4.2 Article Listing</section>
+            <section class="col col-3 col-md-4 col-xs-12">4.1 Article Feature</section>
+            <section class="col col-9 col-md-10 col-xs-12">4.2 Article Listing</section>
         </div>
         </main>
         <aside>
             <div id="aside">5. Sidebar
-                <section class="col">5.1 Sidebar Feature</section>
+                <section>5.1 Sidebar Feature</section>
             </div>
         </aside>
-        <footer class="col col-12">6. Footer</footer>
+        <footer class="col col-12 col-md-12 col-xs-12">6. Footer</footer>
     </div>
 </body>
 </html>
