--- a/site/Finals/Exercise12b.html
+++ b/site/Finals/Exercise12b.html
@@ -10,46 +10,46 @@
 <body>
     <div id="wrapper">
         <div class="row">
-            <header class="col-12 header">
+            <header class="col-12 col-md-12 col-sm-12 col-xs-12 header">
                 <p>1. Header</p>
-                <div class="col-2 brand">
+                <div class="col-2 col-md-6 col-sm-5 col-xs-12 brand">
                     <p>1.1 Brand</p>
                 </div>
-                <div class="col-7 GlobalNav">
+                <div class="col-7 col-md-6 col-sm-7 col-xs-12 GlobalNav">
                     <p>1.2 Global Nav</p>
                 </div>
-                <div class="col-3 tools">
+                <div class="col-3 col-md-6 col-sm-12 col-xs-12 tools">
                     <p>1.3 Tools</p>
                 </div>
             </header>
         </div>
         <!-- Row Two -->
         <div class="row">
-            <div class="col-9 col-sm-6 hero">
+            <div class="col-9 col-md-12 col-sm-9 col-xs-12 hero">
                 <p>2. Hero</p>
-                <div class="col-9 hf">
+                <div class="col-9 col-md-6 col-sm-12 col-xs-12 hf">
                     <p>2.1 Hero Feature</p>
                 </div>
-                <div class="col-3 hcta">
+                <div class="col-3 col-md-6 col-sm-12 col-xs-12 hcta">
                     <p>2.2 Hero Call to Action</p>
                 </div>
             </div>
-            <div class="col-3 col-sm-6 ad">
+            <div class="col-3 col-md-12 col-sm-3 col-xs-12 ad">
                 <p>3. Ad</p>
             </div>
         </div> 
         <!-- Row Three -->
-        <div cass="row">
-            <div class="col-9 body">
+        <div class="row">
+            <div class="col-9 col-md-9 col-sm-12 col-xs-12 body">
                 <p>4. Body</p>
-                <div class="col-3 af">
+                <div class="col-3 col-md-9 col-sm-6 col-xs-12 af">
                     <p>4.1 Article Feature</p>
                 </div>
-                <div class="col-9 al">
+                <div class="col-9 col-md-3 col-sm-6 col-xs-12 al">
                     <p>4.2 Article Listing</p>
                 </div>
             </div>
-            <div class="col-3 sidebar">
+            <div class="col-3 col-md-3 col-sm-12 col-xs-12 sidebar">
                 <p>5. Sidebar</p>
                 <div class="col-12 sf">
                     <p>5.1 Sidebar Feature</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <!-- Row Four -->
-        <footer class="col-12 footer">
+        <footer class="row col-12 col-md-12 col-sm-12 col-xs-12 footer">
             <p>6. Footer</p>
         </footer>
     </div>
