--- a/site/Finals/Exercise12b.html
+++ b/site/Finals/Exercise12b.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta author="author" content="J. Villena">
+    <meta name="author" content="J. Villena">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/Exercise12b.css">
     <title>Exercise 12 (Take TWO)</title>
