--- a/site/Finals/Exercise15.html
+++ b/site/Finals/Exercise15.html
@@ -6,7 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 15</title>
 </head>
-<body>
-    
+<body><script src="javascript/Script15.js"></script>
+    <h2>Student Information Sheet</h2>
+    <h3>Personal Info</h3>
+    <label for="fname">First name</label>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="age">Age</label>
+    <input type="age" id="age" name="age">
+    <h3>Contact Information</h3>
+    <label for="pn">Phone Number</label>
+    <input type="tel" id="pn" name="pn"><br>
+    <label for="ea">Email Address</label>
+    <input type="email" id="ea" name="ea"><br>
+    <label for="ma">Mailing Address</label>
+    <input type="text" id="ma" name="ma">
+    <h3>Academic Information</h3>
+    <label for="pro">Program</label>
+    <input type="text" id="pro" name="pro"><br>
+    <label for="id">IDnumber</label>
+    <input type="number" id="id" name="id"><br>
+    <label for="yl">Year Level</label>
+    <input type="text" id="yl" name="yl"><br>
+    <label for="sec">Section</label>
+    <input type="text" id="sec" name="sec"><br>
 </body>
 </html>
