--- a/site/Finals/Exercise16.html
+++ b/site/Finals/Exercise16.html
@@ -7,6 +7,14 @@
     <title>Exercise 16</title>
 </head>
 <body>
-    
+    <label for="fname">First name</label>
+    <input type="text" id="fname" name="fname">
+    <label for="lname">Last name</label>
+    <input type="text" id="lname" name="lname">
+    <label for="age">Age</label>
+    <input type="age" id="age" name="age">
+    <script>
+        console.log(fname+" "+lname+" "+age)
+    </script>
 </body>
 </html>
