--- a/site/Finals/Exercise17.html
+++ b/site/Finals/Exercise17.html
@@ -7,6 +7,10 @@
     <title>Exercise 17</title>
 </head>
 <body>
-    
+    <script>
+        let mytext='Here is \nsome text!';
+ mytext= 'Today is another busy day!';
+console.log(mytext);
+    </script>
 </body>
 </html>
