--- a/site/Finals/Exercise18a.html
+++ b/site/Finals/Exercise18a.html
@@ -4,35 +4,21 @@
     <meta charset="UTF-8">
     <meta name="author" content="J. Villena">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 17</title>
+    <title>Exercise 18</title>
 </head>
 <body>
     <script>
        switch (new Date().getDay()) {
-  case 0:
-    day = "Sunday";
-    break;
   case 1:
     day = "Monday";
-    break;
-  case 2:
-     day = "Tuesday";
-    break;
-  case 3:
-    day = "Wednesday";
-    break;
-  case 4:
-    day = "Thursday";
     break;
   case 5:
     day = "Friday";
     break;
-  case 6:
-    day = "Saturday";
 }
     if(Date==1)
     alert("Hello");
-    if(Date==5)
+    else
     alert("Welcome");
     </script>
 </body>
