--- a/site/Finals/Exercise17b.html
+++ b/site/Finals/Exercise17b.html
@@ -30,9 +30,9 @@
   case 6:
     day = "Saturday";
 }
-    if(Date==1)
+    if(Day==1)
     alert("Hello");
-    if(Date==5)
+    if(Day==5)
     alert("Welcome");
     </script>
 </body>
