--- a/site01/index.html
+++ b/site01/index.html
@@ -11,42 +11,38 @@
     <div id="wrapper">
         <div class="row">
             <header class="col-12 col-md-12 col-sm-12 col-xs-12 header">
-                <h1>Do You Dare?</h1>
-                <div class="col-2 col-md-6 col-sm-5 col-xs-12 brand">
+                <h1><center>Do You Dare?</center></h1>
+                <div class="col-6 col-md-6 col-sm-3 col-xs-12 me">
                     <img src="assets/imgs/Screenshot_2019-02-02-21-36-58.png">
                 </div>
-                <div class="col-7 col-md-6 col-sm-7 col-xs-12 GlobalNav">
+                <div class="col-6 col-md-6 col-sm-7 col-xs-12 Nav">
+                    <div class="col-7 col-md-6 col-sm-4 col-xs-12 Nav1">
                     <ul>
                         <li><a href="pages/aboutme.html">About Me</a></li>
                         <li><a href="pages/mygallery.html">My Gallery</a></li>
                         <li><a href="pages/achievements.html">My Achievements</a></li>
                         <li><a href="pages/references.html">My References</a></li>
                     </ul>
-                </div>
-            </header>
-        </div>
-        <!-- Row Two -->
-        <div class="row">
-            <div class="col-9 col-md-12 col-sm-9 col-xs-12 hero">
-                <h2>Introduction</h2>
-                <div class="col-9 col-md-6 col-sm-12 col-xs-12 hf">
+                    </div>
+                    <div class="col-7 col-md-6 col-sm-3 col-xs-12 Intro">
+                    <h2>Introduction</h2>
                     <p>I am a freshmen at University of Baguio. I had a great experience in exploring the
                         the technology with the use of sofftwares. My first year of college was worth the shot.
                     </p>
+                    </div>
+                    <div class="col-3 col-md-3 col-sm-4 col-xs-12 Video">
+                    <video width="320" height="240" autoplay muted>
+                        <source src="assets/videos/SweetSnap_20181016_112457.mp4" type="video/mp4">
+                    </video>
+                    </div>
+                    <div class="col-5 col-md-3 col-sm-3 col-xs-12 End">
+                    <p>For more information</p>
+                   <p>Please contact me @ my Facebook Account</p>
+                   <p>Thank You ^_^</p>
+                   </div>
                 </div>
-            </div>
-            <div class="col-3 col-md-12 col-sm-3 col-xs-12 ad">
-                <video width="320" height="240" autoplay muted>
-                    <source src="assets/videos/SweetSnap_20181016_112457.mp4" type="video/mp4">
-                  </video>
-            </div>
-        </div> 
-        <!-- Row Three -->
-        <footer class="row col-12 col-md-12 col-sm-12 col-xs-12 footer">
-            <p>For more information</p>
-            <p>Please contact me @ my Facebook Account</p>
-            <p>Thank You ^_^</p>
-        </footer>
+            </header>
+        </div>
     </div>
 </body>
 </html>
