--- a/site01/index.html
+++ b/site01/index.html
@@ -16,12 +16,12 @@
                     <img src="assets/imgs/Screenshot_2019-02-02-21-36-58.png">
                 </div>
                 <div class="col-6 col-md-6 col-sm-7 col-xs-12 Nav">
-                    <div class="col-7 col-md-6 col-sm-4 col-xs-12 Nav1">
+                    <div id='container' class="col-7 col-md-6 col-sm-4 col-xs-12 Nav1">
                     <ul>
-                        <li><a href="pages/aboutme.html">About Me</a></li>
-                        <li><a href="pages/mygallery.html">My Gallery</a></li>
-                        <li><a href="pages/achievements.html">My Achievements</a></li>
-                        <li><a href="pages/references.html">My References</a></li>
+                        <button id='button1' onclick="appendButton()"><a href="pages/aboutme.html">About Me</a></button>
+                        <button id='button2' onclick="appendButton()"><a href="pages/mygallery.html">My Gallery</a></li></button>
+                        <button id='button3' onclick="appendButton()"><a href="pages/achievements.html">My Achievements</a></li></button>
+                        <button id='button4' onclick="appendButton()"><a href="pages/references.html">My References</a></li></button>
                     </ul>
                     </div>
                     <div class="col-7 col-md-6 col-sm-3 col-xs-12 Intro">
