--- a/site/Finals/Exercise14b.html
+++ b/site/Finals/Exercise14b.html
@@ -6,7 +6,7 @@
 <body>
     <h2>Exercise 14b by Jhazel ^_^</h2>
     <button type="button" onclick="document.write('Jhazel Villena');">Name</button>
-    <button type="button" onclick="document.write('BS Information Technology');">Course</button>
+    <button type="button" onclick="document.awrite('BS Information Technology');">Course</button>
     <button type="button" onclick="document.write('1st Year');">Year</button>
     <button type="button" onclick="document.write('HUMCOM1-IAA1');">Subject Code & Section</button>
     <button type="button" onclick="document.write('Human Commputer Interaction');">Subject Description</button>
